Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,13 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
+- task: DownloadSecureFile@1
+  name: totosecure
+  inputs:
+    secureFile: 'toto.txt'
+- script: |
+    echo Installing $(totosecure.secureFilePath)
+
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
